new mac, new config, new rule

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -24,17 +24,10 @@ nnoremap <C-j> <C-w>j
 nnoremap <C-k> <C-w>k
 nnoremap <C-l> <C-w>l
 
-" delete etc without changing buffer
-nnoremap x "_x
-nnoremap d "_d
-nnoremap D "_D
-vnoremap d "_d
-vnoremap p "_dP
-
-vnoremap <leader>p ""dP
-nnoremap <leader>d ""d
-nnoremap <leader>D ""D
-vnoremap <leader>d ""d
+vnoremap <leader>p "_dP
+nnoremap <leader>d "_d
+nnoremap <leader>D "_D
+vnoremap <leader>d "_d
 
 
 " intellij specific
